Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p>Be redirected to my other sites!</p>   
       
       <div class="button-space">
-        <a href="https://noelsanbocafigura.github.io/profile/resume" class="button-ui" target="_blank">RESUME</a>
+        <a href="https:./resume/index.html" class="button-ui" target="_blank">RESUME</a>
         <a href="#" class="button-ui" target="_blank">BIO DATA</a>
         <a href="#" class="button-ui" target="_blank">PORTFOLIO</a>
       </div>
