Update links and add coming soon modal

--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
       <p>Be redirected to my other sites!</p>   
       
       <div class="button-space">
-        <a href="https:./resume/index.html" class="button-ui" target="_blank">RESUME</a>
-        <a href="#" class="button-ui" target="_blank">BIO DATA</a>
-        <a href="#" class="button-ui" target="_blank">PORTFOLIO</a>
+        <a href="./resume/your-file.pdf" class="button-ui" target="_blank">RESUME</a>
+        
+        <a href="./resume/index.html" id="bio-link" class="button-ui">BIO DATA</a>
+        <a href="#" id="portfolio-link" class="button-ui">PORTFOLIO</a>
       </div>
     </div>
+
+    <div id="comingSoonModal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Coming Soon!</h2>
+        <p>This section is currently under development.</p>
+        <p>Please check back later for updates.</p>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
