Change BIO DATA link to a placeholder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="button-space">
         <a href="./resume/index.html" class="button-ui" target="_blank">RESUME</a>
         
-        <a href="./resume/index.html" id="bio-link" class="button-ui">BIO DATA</a>
+        <a href="#" id="bio-link" class="button-ui">BIO DATA</a>
         <a href="#" id="portfolio-link" class="button-ui">PORTFOLIO</a>
       </div>
     </div>
