--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noelsan M. Bocafigura | Resume</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -94,6 +94,6 @@
         </section>
     </main>
 
-    <script src="javascript/javascript.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
