Update resume link to point to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p>Be redirected to my other sites!</p>   
       
       <div class="button-space">
-        <a href="./resume/resume.html" class="button-ui" target="_blank">RESUME</a>
+        <a href="./resume/index.html" class="button-ui" target="_blank">RESUME</a>
         
         <a href="#" id="bio-link" class="button-ui">BIO DATA</a>
         <a href="#" id="portfolio-link" class="button-ui">PORTFOLIO</a>
