Update profile picture URL to include raw=true

--- a/resume/index.html
+++ b/resume/index.html
@@ -31,7 +31,7 @@
     
     <main class="main-space">
         <div class="profile-pic-container">
-            <img src="https://raw.githubusercontent.com/NoelsanBocafigura/profile/main/assets/images/profile-pic.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="https://raw.githubusercontent.com/NoelsanBocafigura/profile/main/assets/images/profile-pic.jpg?raw=true" alt="Profile Picture" class="profile-pic">
         </div>
 
         <section id="name" class="text-block">
